--- a/style.css
+++ b/style.css
@@ -49,3 +49,33 @@
         b {
             padding-left: 3%;
         }
+        .containerr {
+            width: 200px;
+            height: 200px;
+            background-color: #ccc;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .circlee {
+            width: 100px;
+            height: 100px;
+            background-color: #3498db;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .circlee img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+        .textt {
+            text-align: center;
+        }
